Upgrade Karaf, CXF, Asciidoctor, XStream, and related dependencies
- Pax Exam tests now look up karaf version from their POMs instead of
  hard coding the value when generating the VM options. Otherwise the
  Karaf specs locator will fail to load and cause hard to debug SPI
  loading to fail on XML libraries like Woodstox.
- Fixed disabled test-itests-ddf module.
- Removed TLSv1.1 since Java 11 disables it by default.
- Added JAVA_OPTs to suppress XStream reflection module warnings which
  were printing to standard out during install.
- Removed unused development profile to speed up the integration test
  for the apps feature file.
- Increased waitForRequiredBundles poll interval from every few
  milliseconds to every 10 seconds. Before the itests logs would be
  spammed for 20 minutes waiting on a dependency to load.